# refal

./: .envrc  README.md  flake.nix  refal.cabal
.devcontainer/: devcontainer.json
app/: Main.hs
examples/: conditions.refal  merge_sort.refal  nestedclauses.refal  quick_sort.refal  sorting.refal
src/Language/: Refal.hs
src/Language/Refal/: BasisTypes.hs  Evaluator.hs  ExtendedTypes.hs  Parser.hs  PatternMatching.hs  Sugar.hs  Syntax.hs  Types.hs
src/Language/Refal/PatternMatching/: Types.hs
src/Language/Refal/PatternMatching/Implementations/: Applicative.hs  Recursive.hs  State.hs
src/Language/Refal/Sugar/: Types.hs
src/Language/Refal/Syntax/: Types.hs
test/: Main.hs
