cabal-version: 2.4
name:          refal
version:       0.1.0.0
copyright:     2024 uf5
maintainer:    notbailey13@gmail.com
author:        uf5
category:      Language

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds

  default-extensions: ImportQualifiedPost
  build-depends:
    , base        >=4.13.0.0 && <4.18.0.0.0
    , megaparsec

  hs-source-dirs:     src
  default-language:   Haskell2010

executable refal
  import:        shared
  main-is:       Main.hs
  other-modules:
    Language.Refal
    Language.Refal.Evaluator
    Language.Refal.Parser
    Language.Refal.Types
