cabal-version: 2.4
name:          refal
version:       0.1.0.0
copyright:     2024 uf5
maintainer:    notbailey13@gmail.com
author:        uf5
category:      Language

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds

  build-depends:
    , base        >=4.13.0.0 && <4.18.0.0.0
    , megaparsec
    , mtl

  default-language: Haskell2010

library refal-lib
  import:          shared
  hs-source-dirs:  src
  exposed-modules: Language.Refal
  other-modules:
    Language.Refal.BasisTypes
    Language.Refal.Evaluator
    Language.Refal.ExtendedTypes
    Language.Refal.Parser
    Language.Refal.PatternMatching
    Language.Refal.Syntax

executable refal-exe
  import:         shared
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  refal-lib

test-suite test
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , hspec
    , refal-lib
